--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ license-file = "LICENSE"
 description = "A Rust library for handling IO operations, providing asynchronous read/write and stream processing capabilities."
 
 [dependencies]
-tokio = { version = "1", features = ["io-std", "rt-multi-thread"] }
+tokio = { version = "1", features = ["io-std", "rt-multi-thread", "process", "macros", "io-util"] }
 async-trait = "0.1.88"
+log = "0.4.27"
+shlex = "1.3.0"
+sfo-result = "0.2.6"
