--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license-file = "LICENSE"
 description = "A Rust library for handling IO operations, providing asynchronous read/write and stream processing capabilities."
 
 [dependencies]
-tokio = { version = "1", features = ["io-std", "rt-multi-thread", "process", "macros", "io-util"] }
+tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.88"
 log = "0.4.27"
 shlex = "1.3.0"
