--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sfo-io"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 repository = "https://github.com/wugren/sfo-io.git"
 license-file = "LICENSE"
@@ -9,6 +9,5 @@ description = "A Rust library for handling IO operations, providing asynchronous
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.88"
-log = "0.4.27"
 shlex = "1.3.0"
-sfo-result = "0.2.6"
+sfo-result = { version = "0.2.7"}
