--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sfo-io"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 repository = "https://github.com/wugren/sfo-io.git"
 license-file = "LICENSE"
@@ -11,3 +11,17 @@ tokio = { version = "1", features = ["full"] }
 async-trait = "0.1.88"
 shlex = "1.3.0"
 sfo-result = { version = "0.2.7"}
+governor = "0.10.1"
+nonzero_ext = "0.3.0"
+futures = "0.3.31"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
+
+[[test]]
+name = "stat_stream"
+path = "src/stat_stream.rs"
+
+[[test]]
+name = "limit_stream"
+path = "src/limit_stream.rs"
