add LimitDatagram for rate-limited datagram communication

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sfo-io"
-version = "0.1.7"
+version = "0.1.8"
 edition = "2024"
 repository = "https://github.com/wugren/sfo-io.git"
 license-file = "LICENSE"
@@ -14,6 +14,8 @@ sfo-result = { version = "0.2.7"}
 governor = "0.10.1"
 nonzero_ext = "0.3.0"
 futures = "0.3.31"
+pin-project = "1.1.10"
+sfo-split = { version = "0.1.7", features = ["io"] }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
